--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,39 +7,39 @@ version: 2.1
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
-  create_infrastructure:
-    docker:
-      - image: amazon/aws-cli
-    steps:
-      - checkout
-      - run:
-          name: Create Cloudformation Stack
-          command: |
-            aws cloudformation deploy \
-                    --template-file template.yml \
-                    --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
-                    --region us-east-1
-
-  # configure_infrastructure:
+  # create_infrastructure:
   #   docker:
-  #     - image:
-  #         python: '3.7-alpine3.11'
+  #     - image: amazon/aws-cli
   #   steps:
   #     - checkout
-  #     - add_ssh_key:
-  #         fingerprints: ["53:99:4a:fc:8e:c5:38:b5:06:2a:28:9e:a5:0e:65:c3"]
   #     - run:
-  #         name: Install Ansible
+  #         name: Create Cloudformation Stack
   #         command: |
-  #           apk add --update ansible
+  #           aws cloudformation deploy \
+  #                   --template-file template.yml \
+  #                   --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
+  #                   --region us-east-1
 
-  #     - run:
-  #         name: Run Playbook and configure server
-  #         command: |
-  #           ansible-playbook -i [inventory-file] [playbook-file]
+  configure_infrastructure:
+    docker:
+      - image:
+          python: "3.7-alpine3.11"
+    steps:
+      - checkout
+      - add_ssh_key:
+          fingerprints: ["53:99:4a:fc:8e:c5:38:b5:06:2a:28:9e:a5:0e:65:c3"]
+      - run:
+          name: Install Ansible
+          command: |
+            apk add --update ansible
+
+      - run:
+          name: Run Playbook and configure server
+          command: |
+            ansible-playbook -i [inventory-file] [playbook-file]
 
 workflows:
   cloud_formation_stackflow:
     jobs:
-      - create_infrastructure
-      # - configure_infrastructure
+      # - create_infrastructure
+      - configure_infrastructure
