--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
       - run:
           name: Run Playbook and configure server
           command: |
-            ansible-playbook -i [inventory-file] [playbook-file]
+            ansible-playbook -i inventory.txt setup_web_server.yml
 
 workflows:
   cloud_formation_stackflow:
