--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,19 +6,28 @@ version: 2.1
 
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
+
+commands:
+  destroy_environment:
+    steps:
+      - run:
+          name: Destroy environment
+          when: on_fail
+          command: |
+            aws cloudformation delete-stack --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5}
 jobs:
-  # create_infrastructure:
-  #   docker:
-  #     - image: amazon/aws-cli
-  #   steps:
-  #     - checkout
-  #     - run:
-  #         name: Create Cloudformation Stack
-  #         command: |
-  #           aws cloudformation deploy \
-  #                   --template-file template.yml \
-  #                   --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
-  #                   --region us-east-1
+  create_infrastructure:
+    docker:
+      - image: amazon/aws-cli
+    steps:
+      - checkout
+      - run:
+          name: Create Cloudformation Stack
+          command: |
+            aws cloudformation deploy \
+                    --template-file template.yml \
+                    --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
+                    --region us-east-1
 
   configure_infrastructure:
     docker:
@@ -41,17 +50,11 @@ jobs:
     docker:
       - image: alpine:latest
     steps:
-      - run: apk add --update curl
       - run:
           name: smoke test
-          command: |
-            URL="https://blog.udacity.com/"
-            if curl -s -head ${URL}
-            then
-              return 0
-            else
-              return 1
-            fi
+          command: return 1
+
+      - destroy_environment
 workflows:
   cloud_formation_stackflow:
     jobs:
