--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,7 +52,8 @@ jobs:
     steps:
       - run:
           name: smoke test
-          command: return 1
+          command: |
+            return 1
 
       - destroy_environment
 workflows:
