--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,4 +76,4 @@ workflows:
       # - create_infrastructure
       # - configure_infrastructure
       # - smoke_test
-      - configure_infrastructure
+      - rollback_infrastructure
