--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -104,6 +104,21 @@ jobs:
           root: ~/
           paths:
             - textfile.txt
+
+  # Executes the cloudfront.yml template that will modify the existing CloudFront Distribution, change its target from the old bucket to the new bucket - `mybucket-${CIRCLE_WORKFLOW_ID:0:7}`.
+  # Notice here we use the stack name `production-distro` which is the same name we used while deploying to the S3 bucket manually.
+  promote_to_production:
+    docker:
+      - image: amazon/aws-cli
+    steps:
+      - checkout
+      - run:
+          name: Execute cloudfront.yml
+          command: |
+            aws cloudformation deploy \
+            --template-file cloudfront.yml \
+            --stack-name production-distro \
+            --parameter-overrides PipelineID="mybucket-${CIRCLE_WORKFLOW_ID:0:7}"
 workflows:
   cloud_formation_stackflow:
     jobs:
@@ -112,4 +127,5 @@ workflows:
       # - smoke_test
       # - rollback_infrastructure
       # - create_and_deploy_front_end
-      - get_last_deployment_id
+      # - get_last_deployment_id
+      - promote_to_production
