--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -144,11 +144,11 @@ workflows:
       # - smoke_test
       # - rollback_infrastructure
       - create_and_deploy_front_end
-      - promote_to_production
+      - promote_to_production:
           requires:
             - create_and_deploy_front_end
       - get_last_deployment_id
-      - clean_up_old_front_end
+      - clean_up_old_front_end:
           requires:
-           - get_last_deployment_id
-           - promote_to_production
+            - get_last_deployment_id
+            - promote_to_production
